--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <div class = "container">
-        <h1 class = "turn">
-        </h1>
-            <div class="board">
-            </div>
+        <div class ="sidebar">
+            <h1 class = "turn">
+            </h1>
+        </div>
+        <div class="board">
+        </div>
     </div>
 <script src="script.js"></script>
 </body>
