--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <div class = "container">
         <div class ="sidebar">
+            <form class="form">
+
+            </form>
             <h1 class = "turn">
             </h1>
         </div>
