Last thing to fix is winner/draw display

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class = "container">
+        <h1 class = "result-display">
+        </h1>
         <div class ="sidebar">
             <form class="form">
             </form>
         </div>
-        <h1 class = "turn">
-        </h1>
         <div class="board">
         </div>
     </div>
